--- a/_includes/widgets/experience_card.html
+++ b/_includes/widgets/experience_card.html
@@ -70,13 +70,11 @@
                     {% if site.data.profile.service %}
                     <div class="col-md-6">
                         <div class="mx-2 my-1">
-                            <h6>Service</h6>
-                            <ul class="list small pl-3 mb-1">
+                            <h6>TA Service</h6>
+                            <ul class="service-list list-unstyled small pl-3 mb-1">
                                 {% for item in site.data.profile.service %}
-                                <li>
-                                    <div class="d-flex">
-                                        <div>{{ item.name }}</div>
-                                    </div>
+                                <li class="service-item">
+                                    {{ item.name }}
                                 </li>
                                 {% endfor %}
                             </ul>
